bug fix of navmenu not covering every element on mobile when displayed

--- a/styles/Nav.module.scss
+++ b/styles/Nav.module.scss
@@ -63,6 +63,8 @@
     top: 3.5rem;
     transition: 0.5s;
     width: 100%;
+    z-index: 1;
+
     &.active {
       right: 0;
     }
